--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,96 +1,66 @@
-{% load static %}
+</html>
+<head>
+  <head>
+   <title>Downloads</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<style>
+.contact-image {
+  height:170px;
+  width:100%;
+  background-size:cover;
+}
+</style>  
+</head>
 
+<body>
 
-<!doctype html>
-<html lang="en">
-  <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <!-- mobile metas -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-      <!-- site metas -->
-      <title>contact</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <!-- bootstrap css -->
-      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-      <!-- style css -->
-      <link rel="stylesheet" href="{% static 'css/style.css' %}">
-      <!-- Responsive-->
-      <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-      <!-- fevicon -->
-      <link rel="icon" href="{% static 'images/fevicon.png' %}" type="image/gif" />
-      <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
-      <!-- Tweaks for older IEs-->
-      <link rel="stylesheet" href="{% static 'https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css' %}">
-      <link rel="stylesheet" href="{% static 'https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css' %}" media="screen">
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-   </head>
-  <body class='main-layout'>
-    <!-- loader  -->
-    <!--<div class="loader_bg">
-      <div class="loader"><img src="{% static 'images/loading.gif' %}" alt="#" /></div>
-   </div>-->
-   <!-- end loader -->
-   <!-- header -->
-   <header>
-      <!-- header inner -->
-      <div class="header">
-         <div class="container">
-            <div class="row">
-               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                  <div class="full">
-                     <div class="center-desk">
-                        <div class="logo">
-                           <a href="{% static 'index.html' %}"><img src="{% static 'images/logo.png' %}" alt="#" /></a>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                  <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                     <span class="navbar-toggler-icon"></span>
-                     </button>
-                     <div class="collapse navbar-collapse" id="navbarsExample04">
-                        <ul class="navbar-nav mr-auto">
-                            {% block content %}
-                           <li class="nav-item ">
-                              <a class="nav-link" href="{% url 'home' %}">Home</a>
-                           </li>
-                           <li class="nav-item ">
-                              
-                              <a class="nav-link" href="{% url 'about' %}"> About  </a>
-                              
-                           </li>
-                           <li class="nav-item ">
-                             
-                              <a class="nav-link" href="{% url 'downloads' %}"> Downloads</a>
-                              
-                           </li>
-                           <li class="nav-item active">
-                             
-                              <a class="nav-link" href="{% static '#' %}">Contact</a>
-                              
-                           </li>
-                           <li class="nav-item">
-                             
-                            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
-                              
-                           </li>
-                           {% endblock %}
-                        </ul>
-                     </div>
-                  </nav>
-               </div>
-            </div>
-         </div>
+  {% include 'header.html' %}
+
+  {% block content %}
+
+  {% endblock %}
+
+<div style="margin-top: 25px;" class="container">
+  <div class="row">
+    <div class="col-sm text-center">
+      <h1 class="div-heading display-4">Contact US</h1>
+    </div>
+  </div>
+
+  
+
+  <div style="margin-top: 35px;" class="row">
+    <div class="col-md-6">
+      <form action = "/scriptrequest" method = "POST">
+        {% csrf_token %} 
+        <div class="form-group">
+          <input name="name" type="name" class="form-control" id="exampleInputName" placeholder="Your Full Name...">
+        </div>
+        <div class="form-group">
+          <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your Email Address...">
+        </div>
+        <div class="form-group">
+          <input name="mobile" type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your Mobile No...">
+        </div>
+        <div class="form-group">
+          <input name="website_name" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Website name">
+        </div>
+        <div class="form-group">
+          <input name="website_url" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Website link">
+        </div>
+        <button type="submit" class="btn btn-warning btn-lg btn-block">Submit</button>
+      </form>
+    </div>
+    <div  style="margin-left: 15%;" class="col-md-4">
+      <h5>Address: enkatadri IT Park, HP Avenue, Konnappana, Electronic city, Bengaluru, Karnataka 560069</h5>
+      <h5>Email: hire@luxurytaxicab.com</h5>
+      <h5>Contact: +91 98765 10278 || +91 76589 14244</h5>
+      
+      <div class="text-center">
+        <img class="img-fluid contact-image" alt="Responsive image" src="https://csds.qld.edu.au/sdc/resources/images/find-us-map.jpg" class="rounded" alt="...">
       </div>
-   </header>
-    
-  </body>
+    </div>
+  </div>
+</div>
+</body>
 </html>
