--- a/templates/downloads.html
+++ b/templates/downloads.html
@@ -1,96 +1,42 @@
-{% load static %}
+<head>
+  <head>
+   <title>Downloads</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+<style>
+  #centre{
+    margin-top: 15px;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+  }
+  .card{
+    margin-top: 15px;
+  }
+  
+</style>  
+</head>
+  
+  
+  <body>
 
+    {% include 'header.html' %}
 
-<!doctype html>
-<html lang="en">
-  <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <!-- mobile metas -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-      <!-- site metas -->
-      <title>downloads</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
-      <!-- bootstrap css -->
-      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-      <!-- style css -->
-      <link rel="stylesheet" href="{% static 'css/style.css' %}">
-      <!-- Responsive-->
-      <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-      <!-- fevicon -->
-      <link rel="icon" href="{% static 'images/fevicon.png' %}" type="image/gif" />
-      <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
-      <!-- Tweaks for older IEs-->
-      <link rel="stylesheet" href="{% static 'https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css' %}">
-      <link rel="stylesheet" href="{% static 'https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css' %}" media="screen">
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-   </head>
-  <body class='main-layout'>
-    <!-- loader  -->
-    <!--<div class="loader_bg">
-      <div class="loader"><img src="{% static 'images/loading.gif' %}" alt="#" /></div>
-   </div>-->
-   <!-- end loader -->
-   <!-- header -->
-   <header>
-      <!-- header inner -->
-      <div class="header">
-         <div class="container">
-            <div class="row">
-               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                  <div class="full">
-                     <div class="center-desk">
-                        <div class="logo">
-                           <a href="{% static 'index.html' %}"><img src="{% static 'images/logo.png' %}" alt="#" /></a>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                  <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-                     <span class="navbar-toggler-icon"></span>
-                     </button>
-                     <div class="collapse navbar-collapse" id="navbarsExample04">
-                        <ul class="navbar-nav mr-auto">
-                            {% block content %}
-                           <li class="nav-item ">
-                              <a class="nav-link" href="{% url 'home' %}">Home</a>
-                           </li>
-                           <li class="nav-item ">
-                              
-                              <a class="nav-link" href="{% url 'about' %}"> About  </a>
-                              
-                           </li>
-                           <li class="nav-item active">
-                             
-                              <a class="nav-link" href="{% static '#' %}"> Downloads</a>
-                              
-                           </li>
-                           <li class="nav-item">
-                             
-                              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-                              
-                           </li>
-                           <li class="nav-item">
-                             
-                            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
-                              
-                           </li>
-                           {% endblock %}
-                        </ul>
-                     </div>
-                  </nav>
-               </div>
-            </div>
-         </div>
+    {% block content %}
+ 
+    {% endblock %}
+
+    <div  id="centre" class="row">
+      {% for row in myresult %}
+      <div class="col-sm-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"><b>{{row.1}}</b></h5>
+            <p class="card-text">{{row.4}}</p>
+            <a href="downloads/{{row.0}}" class="btn btn-primary">Download</a>
+          </div>
+        </div>
       </div>
-   </header>
-    
+      {% endfor %}    
   </body>
-</html>
+  </html>
+  
+  
