--- a/templates/header.html
+++ b/templates/header.html
@@ -3,6 +3,7 @@
 
 <!doctype html>
 <html lang="en">
+   <head>
   <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <!-- mobile metas -->
@@ -46,7 +47,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="{% static 'index.html' %}"><img src="{% static 'images/logo.png' %}" alt="#" /></a>
+                           <a href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="#" /></a>
                         </div>
                      </div>
                   </div>
@@ -74,7 +75,7 @@
                            </li>
                            <li class="nav-item">
                              
-                              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                              <a class="nav-link" href="{% url 'contact' %}">Request a Script</a>
                               
                            </li>
                            <li class="nav-item">
