--- a/templates/login.html
+++ b/templates/login.html
@@ -57,7 +57,7 @@
    {% block content %}
 
    {% endblock %} 
-   <form action = "/about" method = "POST">
+   <form action = "/login/scriptavailable" method = "POST">
       {% csrf_token %} 
       <div id="login">
          <h3 style="color: #0c0f38;" class="text-center text-white pt-5">Login form</h3>
@@ -78,9 +78,6 @@
                            <div class="form-group">
                                  <br>
                                  <input style="background-color: #0c0f38;" type="submit" name="Login" class="btn btn-info btn-md" value="Login">
-                           </div>
-                           <div id="register-link" class="text-right">
-                                 <a href="#" class="text-info"></a>
                            </div>
                         </form>
                      </div>
